# understanding-clip-ood

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: download_domainnet.sh  in_to_dn_mapping.json
scripts/: add_in_sketches.py  analyze_sae_features.py  compute_circuit_similarity.py  compute_circuits.py  compute_node_similarity.py  embedding_analysis.py  evaluate_domainnet_lso_openai.py  evaluate_domainnet_lso_openai_topk.py  evaluate_domainnet_supervised_lso.py  generate_domainnet_captions.py  generate_imagenet_captions.py  generate_sketch_captions.py  merge_ccxm.py  mix_in_sketches.py  name_concepts.py  save_domainnet_features.py  subsample_domainnet_lso.py  train_combined_captions.py  train_sae.py
slurm/: evaluate-clip.sh  evaluate-supervised.sh  subsample-domainnet.sh  train-clip-ccxm.sh  train-clip.sh  train-sae.sh  train-supervised.sh
xclip/: __init__.py  callbacks.py  datasets.py  learner.py  utils.py  zero_shot.py
xclip/clip/: __init__.py  model.py  tokenizer.py
xclip/feature_circuits/: activation_utils.py  attribution.py  circuit.py  coo_utils.py  dictionary.py  graph_utility.py  submodule.py
xclip/open_clip/: __init__.py  model.py
xclip/sparse_autoencoder/: __init__.py  method.py  pipeline.py
